Mac fullscreen low power: Add unittests

Fix a bug in ChildWindowsChanged, discovered by those tests.

Move command line check to controller, to make unittests work.

Don't allow entering low power mode until the fullscreen low power
layer has been valid for 15 frames. This ensures that we won't get
flashes of invalid content.

BUG=616364

Review-Url: https://codereview.chromium.org/2047103003
Cr-Commit-Position: refs/heads/master@{#399135}

Former-commit-id: 15c873daec19bf34e8b3d4925c9668faaba5e634